--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,21 @@
   <artifactId>warnings</artifactId>
   <packaging>hpi</packaging>
   <name>Hudson Warnings Plug-in</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <url>http://hudson.gotdns.com/wiki/display/HUDSON/Warnings+Plugin</url>
-  <description>This plug-in reads the compiler warnings from the console log file and generates a trend report.</description>
+  <description>This plug-in reads the compiler warnings from the
+    console log file and generates a trend report.</description>
 
   <licenses>
-  	<license><name>MIT license</name><comments>All source code is under the MIT license.</comments></license>
-  	<license><name>LGPL</name><comments>All icons are made by Carlitus (Carles Carbonell Bernado) and are under the LGPL.</comments></license>
+    <license>
+      <name>MIT license</name>
+      <comments>All source code is under the MIT license.</comments>
+    </license>
+    <license>
+      <name>LGPL</name>
+      <comments>All icons are made by Carlitus (Carles Carbonell
+        Bernado) and are under the LGPL.</comments>
+    </license>
   </licenses>
 
   <dependencies>
@@ -61,13 +69,21 @@
   </dependencies>
 
   <build>
-     <plugins>
-    	<plugin>
-    	    <groupId>org.kohsuke.stapler</groupId>
-    	    <artifactId>maven-stapler-plugin</artifactId>
-    	    <extensions>true</extensions>
-    	</plugin>
-     </plugins>
+    <plugins>
+      <plugin>
+        <groupId>org.kohsuke.stapler</groupId>
+        <artifactId>maven-stapler-plugin</artifactId>
+        <extensions>true</extensions>
+      </plugin>
+      <plugin>
+        <groupId>org.jvnet.hudson.tools</groupId>
+        <artifactId>maven-hpi-plugin</artifactId>
+        <configuration>
+          <showDeprecation>true</showDeprecation>
+          <showWarnings>true</showWarnings>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 
   <repositories>
@@ -84,4 +100,49 @@
     </repository>
   </repositories>
 
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-pmd-plugin</artifactId>
+        <version>4.3</version>
+        <configuration>
+          <rulesets>
+            <ruleset>${project.artifactId}/.ruleset</ruleset>
+          </rulesets>
+          <targetJdk>1.5</targetJdk>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <version>1.2</version>
+        <configuration>
+          <xmlOutput>true</xmlOutput>
+          <findbugsXmlOutput>true</findbugsXmlOutput>
+          <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
+          <threshold>Low</threshold>
+          <effort>Max</effort>
+          <debug>false</debug>
+          <relaxed>false</relaxed>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>2.1</version>
+        <configuration>
+          <configLocation>${project.artifactId}/checkstyle-configuration.xml
+          </configLocation>
+        </configuration>
+      </plugin>
+    </plugins>
+  </reporting>
+
+
+  <scm>
+    <connection>scm:svn:https://guest@svn.dev.java.net/svn/hudson/tags/warnings-1.0</connection>
+    <developerConnection>scm:svn:https://svn.dev.java.net/svn/hudson/tags/warnings-1.0</developerConnection>
+    <url>https://hudson.dev.java.net/source/browse/hudson/hudson/plugins/warnings/tags/warnings-1.0</url>
+  </scm>
 </project>
