--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
     	<artifactId>commons-digester3</artifactId>
     	<version>3.2</version>
     </dependency>
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.3.2</version>
+    </dependency>
   </dependencies>
 
   <scm>
