--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jvnet.hudson.plugins</groupId>
     <artifactId>analysis-pom</artifactId>
-    <version>1.68-SNAPSHOT</version>
+    <version>1.68</version>
     <relativePath>../analysis-pom</relativePath>
   </parent>
 
@@ -44,7 +44,7 @@
     <dependency>
       <groupId>org.jvnet.hudson.plugins</groupId>
       <artifactId>analysis-core</artifactId>
-      <version>1.93-SNAPSHOT</version>
+      <version>1.93</version>
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
