--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
     <dependency>
       <groupId>org.jvnet.hudson.plugins</groupId>
       <artifactId>analysis-test</artifactId>
-      <version>1.20-SNAPSHOT</version>
+      <version>1.20</version>
       <scope>test</scope>
     </dependency>
     <dependency>
