--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,16 @@
       <version>2.25</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20180130</version>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-json</artifactId>
+      <version>2.4.1</version>
+    </dependency>
   </dependencies>
 
   <build>
