--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>warnings</artifactId>
   <packaging>hpi</packaging>
   <name>Warnings Plug-in</name>
-  <version>5.0.1</version>
+  <version>5.0.2-SNAPSHOT</version>
   <url>https://wiki.jenkins.io/x/G4CGAQ</url>
   <description>Jenkins plug-in to scan the console log or a compiler log file for warnings.
   </description>
@@ -655,7 +655,7 @@
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-    <tag>warnings-5.0.1</tag>
+    <tag>warnings-5.0.0-beta1</tag>
   </scm>
 
   <repositories>
